# hip_ops

./: .pre-commit-config.yaml  CMakeLists.txt
include/hip_ops/utils/: error_handling.hpp
lib/utils/: CMakeLists.txt  error_handling.cpp
tests/: CMakeLists.txt
tests/kernel/: CMakeLists.txt
tests/kernel/inter_block_cumsum/: CMakeLists.txt  inter_block_cumsum.hip.cpp
tests/unit/: CMakeLists.txt  test_main.cpp
tests/unit/utils/: CMakeLists.txt  test_error_handling.hip.cpp
